k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-core-api-prefix
  namespace: core-api
spec:
  stripPrefix:
    prefixes:
      - /core-api
