k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-api
  namespace: core-api
spec:
  type: ClusterIP
  selector:
    app: core-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
